--- a/convenition_app/pubspec.yaml
+++ b/convenition_app/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
 
   starknet: ^0.1.2+1
 
+  crypto: ^3.0.0
+
+  flutter_svg: ^2.0.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
