--- a/Backend/bin/main/application.properties
+++ b/Backend/bin/main/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Convenio-onChain
+
+
+# Flyway
+spring.flyway.enabled=true
+# spring.flyway.locations=classpath:db/migration # Default location
+# spring.flyway.baseline-on-migrate=true # Useful if you have an existing schema
