--- a/Backend/bin/main/application.properties
+++ b/Backend/bin/main/application.properties
@@ -5,3 +5,11 @@ spring.application.name=Convenio-onChain
 spring.flyway.enabled=true
 # spring.flyway.locations=classpath:db/migration # Default location
 # spring.flyway.baseline-on-migrate=true # Useful if you have an existing schema
+
+spring.datasource.url=jdbc:postgresql://46.202.178.63:5432/convenion-on-chain
+spring.datasource.username=user_root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
