--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,14 +2,15 @@ spring.application.name=Convenio-onChain
 
 
 # Flyway
-spring.flyway.enabled=true
-# spring.flyway.locations=classpath:db/migration # Default location
-# spring.flyway.baseline-on-migrate=true # Useful if you have an existing schema
+
+
+server.port=8081
+server.servlet.context-path=/convenio-api
 
 spring.datasource.url=jdbc:postgresql://46.202.178.63:5432/convenion-on-chain
 spring.datasource.username=user_root
 spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
