--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=Convenio-onChain
 
 
 server.port=8081
-server.servlet.context-path=/convenio-api
+# server.servlet.context-path=/convenio-api
 
 spring.datasource.url=jdbc:postgresql://46.202.178.63:5432/convenion-on-chain
 spring.datasource.username=user_root
