--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.datasource.url=jdbc:postgresql://46.202.178.63:5432/convenion-on-chain
 spring.datasource.username=user_root
 spring.datasource.password=admin
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
