--- a/convenition_app/pubspec.yaml
+++ b/convenition_app/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   flutter_svg: ^2.0.7
   provider: ^6.1.5
 
+  qr_flutter: ^4.0.0
+
+  share_plus: ^7.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
