--- a/Backend/bin/main/application.properties
+++ b/Backend/bin/main/application.properties
@@ -14,3 +14,15 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
+
+# File upload settings
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
+
+# File storage location (create this directory or adjust as needed)
+file.upload-dir=uploads
+
+# Base URL for file access
+app.base-url=http://localhost:8080
