--- a/convenition_app/pubspec.yaml
+++ b/convenition_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   crypto: ^3.0.0
 
   flutter_svg: ^2.0.7
+  
   provider: ^6.1.5
 
   qr_flutter: ^4.0.0
@@ -74,6 +75,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
+  assets:
+    - assets/img/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
