--- a/convenition_app/pubspec.yaml
+++ b/convenition_app/pubspec.yaml
@@ -64,7 +64,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+ # otras dependencias…
+  image_picker: ^0.8.7+3
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
