--- a/convenition_app/android/local.properties
+++ b/convenition_app/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=C:\\Users\\Luis\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\Luis\\Downloads\\flutter
+sdk.dir=C:\\Users\\Lenovo\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\dev\\Flutter\\flutter
+flutter.buildMode=release
+flutter.versionName=1.0.0
+flutter.versionCode=1
