--- a/convenition_app/android/local.properties
+++ b/convenition_app/android/local.properties
@@ -1,5 +1,5 @@
 sdk.dir=C:\\Users\\Lenovo\\AppData\\Local\\Android\\sdk
-flutter.sdk=/home/jairo/flutter_linux
+flutter.sdk=C:\\dev\\Flutter\\flutter
 flutter.buildMode=release
 =======
 flutter.versionName=1.0.0
