--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:postgresql://46.202.178.63:5432/convenion-on-chain
 spring.datasource.username=user_root
 spring.datasource.password=admin
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.transaction.jta.platform.internal.NoJtaPlatform
 
@@ -26,3 +26,14 @@ file.upload-dir=uploads
 
 # Base URL for file access
 app.base-url=https://www.devbychris.com/convenio-api
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=true
+
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
